# jags-pwe

./: .gitignore  AUTHORS  Makefile.am  README  README.md  configure.ac
src/: Makefile.am  exponential.cc  pwexponential.cc
src/distributions/: DExp.cc  DExp.h  DPwexp.cc  DPwexp.h  Makefile.am
src/functions/: DDPwexp.cc  DDPwexp.h  Makefile.am  PPwexp.cc  PPwexp.h  QPwexp.cc  QPwexp.h
src/functions/.deps/: ddpwexp_la-DDPwexp.Plo  dpwexp_la-DPwexp.Plo  ppwexp_la-PPwexp.Plo  ppwexp_la-Ppwexp.Plo  qpwexp_la-QPwexp.Plo
usage_example/: bernoulli.R  exponential.R  functions.R
